--- a/Présentation.ipynb
+++ b/Présentation.ipynb
@@ -29,6 +29,16 @@
    "metadata": {},
    "cell_type": "markdown",
    "source": [
+    "#### Lecture du rapport de 2024 https://www.mdpi.com/2306-5354/11/4/\n",
+    "##### La lecture mes en évidence l'importance d'utiliser des modeèles déjà entrainé plutôt que mettre en place ces propre modéles tel que CNN ayant pourtant un très bon taux de réussite\n",
+    "#####"
+   ],
+   "id": "f9eccf22d4fd0f4a"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
     "### Monté en compétence sur les parties de l'utilisation de Transfer Learning\n",
     "##### Le but de l'utilisation du Transfer Learning permettras d'optimiser le travail sur les parties de l'utilisation des réseau de neuronnes\n",
     "##### Le fait d'utilisation des modèles déja existants et perfomant évite d'avoir a stocker une quantitée importante de données\n",
