MLflow sur modèle VGG16

--- a/Proof_of_Concept.ipynb
+++ b/Proof_of_Concept.ipynb
@@ -83,7 +83,7 @@
     "\n",
     "# Chargement des données d'entraînement et de test.\n",
     "X_train, y_train = get_train_test(\"chest_xray/train\")  # Charge les images pour l'entraînement.\n",
-    "X_test, y_test = get_train_test(\"chest_xray/test\")  # Charge les images pour le test."
+    "X_test, y_test = get_train_test(\"chest_xray/test\")  # Charge les images pour le test.\n"
    ],
    "outputs": [],
    "execution_count": 3
