--- a/Proof_of_Concept.ipynb
+++ b/Proof_of_Concept.ipynb
@@ -606,7 +606,8 @@
     "    mlflow.log_param(\"batch_size\", batch_size)\n",
     "    mlflow.log_param(\"dense_units_final\", dense_units)\n",
     "    mlflow.log_param(\"dropout_rate\", dropout_rate)\n",
-    "    mlflow.keras.log_model(model, \"VGG16_Dynamique\")\n"
+    "    mlflow.keras.log_model(model, \"VGG16_Dynamique\")\n",
+    "\n"
    ],
    "id": "fea21cfe70e6128f",
    "outputs": [],
@@ -639,6 +640,7 @@
     "    if exp.name == experiment_name:\n",
     "        experiment_id = exp.experiment_id\n",
     "        break\n",
+    "\n",
     "\n",
     "# Si l'expérience n'existe pas, la créer\n",
     "if experiment_id is None:\n",
