Mise en place du MLflow pour Xception

--- a/Présentation.ipynb
+++ b/Présentation.ipynb
@@ -70,15 +70,27 @@
     "#### Nous avons tester différent modèle afin de vérifier celui qui pourras être le plus éfficace\n",
     "* Le modèle VGG16 donne un accurancy de  et un loss de\n",
     "* Le modèle ResNet50 donne un accurancy de\n",
-    "* * Le modèle Xception donne un accurancy de"
+    "* * Le modèle Xception donne un accurancy 81.57% de loss de loss de  0.0595"
    ],
    "id": "b5b5a553d02d0b21"
   },
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "L amis e",
+   "source": [
+    "### Choix du modèle et justification\n",
+    "##### le modèle Xception a un retour elevé accurancy.\n",
+    "##### les valeurs de loss reste basse\n",
+    "##### le temps par epoch et de 28 secondes\n",
+    "#### Le MLflows represente les différent test passé et mes en évidence le choix de ce modèle\n"
+   ],
    "id": "452950d9a7d5c404"
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": "",
+   "id": "8a8ca917c1ea6f9d"
   }
  ],
  "metadata": {
